@@ -24,8 +24,9 @@ INCLUDE_REGULAR_EXPRESSION("^.*$")
 
 #-----------------------------------------------------------------------------
 # OPENJPEG version number, usefull for packaging and doxygen doc:
+SET(OPENJPEG_SOVERSION 2)
 SET(OPENJPEG_MAJOR_VERSION 1)
-SET(OPENJPEG_MINOR_VERSION 0)
+SET(OPENJPEG_MINOR_VERSION 2)
 SET(OPENJPEG_BUILD_VERSION 0)
 SET(OPENJPEG_VERSION
   "${OPENJPEG_MAJOR_VERSION}.${OPENJPEG_MINOR_VERSION}.${OPENJPEG_BUILD_VERSION}")
@@ -60,12 +61,18 @@ INCLUDE_DIRECTORIES(BEFORE ${CMAKE_CURRENT_BINARY_DIR})
 SUBDIRS(
   libopenjpeg
   mj2
-  jpwl
-  jp3d
-  indexer_JPIP
   # cmake 2.4.5 has poor java support
   #j2kviewer/src
   )
+
+IF(NOT UNIX)
+SUBDIRS(
+  jpwl
+  jp3d
+  indexer_JPIP
+  )
+ENDIF(NOT UNIX)
+
 #-----------------------------------------------------------------------------
 # Build example only if requested
 IF(BUILD_EXAMPLES)
@@ -102,4 +109,7 @@ FIND_PATH(JPEG2000_CONFORMANCE_DATA_ROOT testimages.html
   $ENV{JPEG2000_CONFORMANCE_DATA_ROOT}
 )
 
-
+IF(CMAKE_COMPILER_IS_GNUCC)
+  SET(CMAKE_WARN_FLAGS "-Wall -Wextra -Wshadow -Wcast-align -Wstrict-prototypes -Wold-style-definition -Wdisabled-optimization -Wfloat-equal")
+  SET(CMAKE_C_FLAGS "${CMAKE_WARN_FLAGS} -ffast-math -fstrict-aliasing -std=c99 ${CMAKE_C_FLAGS}")
+ENDIF(CMAKE_COMPILER_IS_GNUCC)
